--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,9 @@
             "dom"
         ],
         "paths": {
+            "@interfaces/*": [
+                "src/app/interfaces/*"
+            ],
             "@services/*": [
                 "src/app/services/*"
             ],
