--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "i18n-ally.localesPaths": [
         "src/assets/i18n"
     ],
-    "files.eol": "\n"
+    "files.eol": "\n",
+    "svg.preview.background": "custom"
 }
