--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "angular-svg-icon": "^17.0.0",
         "dayjs": "^1.11.10",
         "lodash": "^4.17.21",
+        "ng-let": "^17.0.4",
         "ngx-translate-messageformat-compiler": "^7.0.0",
         "rxjs": "~7.8.0",
         "tslib": "^2.3.0",
