--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "version": "0.0.4",
     "scripts": {
         "build": "ng build",
+        "build:prod": "ng build --configuration production",
         "bump-version": "tsx ./scripts/bump-version.ts",
         "dev": "npm run start",
         "lint": "ng lint",
@@ -21,15 +22,16 @@
         "type": "git"
     },
     "dependencies": {
-        "@angular/animations": "^17.2.0",
-        "@angular/cdk": "^17.2.1",
-        "@angular/common": "^17.2.0",
-        "@angular/compiler": "^17.2.0",
-        "@angular/core": "^17.2.0",
-        "@angular/forms": "^17.2.0",
-        "@angular/platform-browser": "^17.2.0",
-        "@angular/platform-browser-dynamic": "^17.2.0",
-        "@angular/router": "^17.2.0",
+        "@angular/animations": "^17.3.1",
+        "@angular/cdk": "^17.3.1",
+        "@angular/common": "^17.3.1",
+        "@angular/compiler": "^17.3.1",
+        "@angular/core": "^17.3.1",
+        "@angular/forms": "^17.3.1",
+        "@angular/platform-browser": "^17.3.1",
+        "@angular/platform-browser-dynamic": "^17.3.1",
+        "@angular/router": "^17.3.1",
+        "@angular/service-worker": "^17.3.1",
         "@messageformat/core": "^3.3.0",
         "@ngx-translate/core": "^15.0.0",
         "@ngx-translate/http-loader": "^8.0.0",
@@ -78,6 +80,54 @@
         "header": "# D&D Tools",
         "scripts": {
             "postbump": "npm run bump-version"
-        }
+        },
+        "types": [
+            {
+                "type": "feat",
+                "section": "Features"
+            },
+            {
+                "type": "improvement",
+                "section": "Improvements"
+            },
+            {
+                "type": "fix",
+                "section": "Bug Fixes"
+            },
+            {
+                "type": "refactor",
+                "section": "Refactor"
+            },
+            {
+                "type": "perf",
+                "section": "Performance"
+            },
+            {
+                "type": "style",
+                "section": "Style"
+            },
+            {
+                "type": "chore",
+                "section": "Chores"
+            },
+            {
+                "type": "test",
+                "section": "Tests",
+                "hidden": true
+            },
+            {
+                "type": "build",
+                "section": "Build System",
+                "hidden": true
+            },
+            {
+                "type": "ci",
+                "hidden": true
+            },
+            {
+                "type": "docs",
+                "hidden": true
+            }
+        ]
     }
 }
