--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
         "src/assets/i18n"
     ],
     "files.eol": "\n",
-    "svg.preview.background": "transparent"
+    "svg.preview.background": "transparent",
+    "i18n-ally.keystyle": "nested"
 }
