--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,19 @@
             "request": "launch",
             "preLaunchTask": "npm: test",
             "url": "http://localhost:9876/debug.html"
+        },
+        {
+            "command": "npm run dev",
+            "name": "Serve",
+            "request": "launch",
+            "type": "node-terminal"
+        },
+        {
+            "name": "Launch Chrome against 4200",
+            "type": "chrome",
+            "request": "launch",
+            "url": "https://localhost:4200",
+            "webRoot": "${workspaceRoot}"
         }
     ]
 }
